--- a/language/en.json
+++ b/language/en.json
@@ -1,189 +1,189 @@
 {
-    "Preview": "Preview",
-    "Gallery": "Gallery",
-    "Generate": "Generate",
-    "Skip": "Skip",
-    "Stop": "Stop",
-    "Reconnect": "Reconnect",
-    "Input Image": "Input Image",
-    "Advanced": "Advanced",
-    "Upscale or Variation": "Upscale or Variation",
-    "Image Prompt": "Image Prompt",
-    "Inpaint or Outpaint": "Inpaint or Outpaint",
-    "Outpaint Direction": "Outpaint Direction",
-    "Enable Advanced Masking Features": "Enable Advanced Masking Features",
-    "Method": "Method",
-    "Describe": "Describe",
-    "Content Type": "Content Type",
-    "Photograph": "Photograph",
-    "Art/Anime": "Art/Anime",
-    "Apply Styles": "Apply Styles",
-    "Describe this Image into Prompt": "Describe this Image into Prompt",
-    "Image Size and Recommended Size": "Image Size and Recommended Size",
-    "Upscale or Variation:": "Upscale or Variation:",
-    "Disabled": "Disabled",
-    "Vary (Subtle)": "Vary (Subtle)",
-    "Vary (Strong)": "Vary (Strong)",
-    "Upscale (1.5x)": "Upscale (1.5x)",
-    "Upscale (2x)": "Upscale (2x)",
-    "Upscale (Fast 2x)": "Upscale (Fast 2x)",
-    "\ud83d\udcd4 Documentation": "\uD83D\uDCD4 Documentation",
-    "Image": "Image",
-    "Stop At": "Stop At",
-    "Weight": "Weight",
-    "Type": "Type",
+    "Preview": "Visualizar",
+    "Gallery": "Galeria",
+    "Generate": "Gerar",
+    "Skip": "Pular",
+    "Stop": "Parar",
+    "Reconnect": "Reconectar",
+    "Input Image": "Imagem de Entrada",
+    "Advanced": "Avançado",
+    "Upscale or Variation": "Aumentar ou Variação",
+    "Image Prompt": "Prompt de Imagem",
+    "Inpaint or Outpaint": "Preencher ou Expandir",
+    "Outpaint Direction": "Direção da Expansão",
+    "Enable Advanced Masking Features": "Habilitar Recursos Avançados de Mascaramento",
+    "Method": "Método",
+    "Describe": "Descrever",
+    "Content Type": "Tipo de Conteúdo",
+    "Photograph": "Fotografia",
+    "Art/Anime": "Arte/Anime",
+    "Apply Styles": "Aplicar Estilos",
+    "Describe this Image into Prompt": "Descrever esta Imagem no Prompt",
+    "Image Size and Recommended Size": "Tamanho da Imagem e Tamanho Recomendado",
+    "Upscale or Variation:": "Aumentar ou Variação:",
+    "Disabled": "Desabilitado",
+    "Vary (Subtle)": "Variação (Sutil)",
+    "Vary (Strong)": "Variação (Forte)",
+    "Upscale (1.5x)": "Aumentar (1.5x)",
+    "Upscale (2x)": "Aumentar (2x)",
+    "Upscale (Fast 2x)": "Aumentar (Rápido 2x)",
+    "📔 Documentation": "📔 Documentação",
+    "Image": "Imagem",
+    "Stop At": "Parar Em",
+    "Weight": "Peso",
+    "Type": "Tipo",
     "PyraCanny": "PyraCanny",
     "CPDS": "CPDS",
-    "* \"Image Prompt\" is powered by Fooocus Image Mixture Engine (v1.0.1).": "* \"Image Prompt\" is powered by Fooocus Image Mixture Engine (v1.0.1).",
-    "The scaler multiplied to positive ADM (use 1.0 to disable).": "The scaler multiplied to positive ADM (use 1.0 to disable).",
-    "The scaler multiplied to negative ADM (use 1.0 to disable).": "The scaler multiplied to negative ADM (use 1.0 to disable).",
-    "When to end the guidance from positive/negative ADM.": "When to end the guidance from positive/negative ADM.",
-    "Similar to the Control Mode in A1111 (use 0.0 to disable).": "Similar to the Control Mode in A1111 (use 0.0 to disable).",
-    "Outpaint Expansion (": "Outpaint Expansion (",
+    "* \"Image Prompt\" is powered by Fooocus Image Mixture Engine (v1.0.1).": "* \"Prompt de Imagem\" é alimentado pelo Fooocus Image Mixture Engine (v1.0.1).",
+    "The scaler multiplied to positive ADM (use 1.0 to disable).": "O escalador multiplicado para ADM positivo (use 1.0 para desabilitar).",
+    "The scaler multiplied to negative ADM (use 1.0 to disable).": "O escalador multiplicado para ADM negativo (use 1.0 para desabilitar).",
+    "When to end the guidance from positive/negative ADM.": "Quando terminar a orientação do ADM positivo/negativo.",
+    "Similar to the Control Mode in A1111 (use 0.0 to disable).": "Semelhante ao Modo de Controle no A1111 (use 0.0 para desabilitar).",
+    "Outpaint Expansion (": "Expansão Outpaint (",
     "Outpaint": "Outpaint",
-    "Left": "Left",
-    "Right": "Right",
-    "Top": "Top",
-    "Bottom": "Bottom",
-    "* \"Inpaint or Outpaint\" is powered by the sampler \"DPMPP Fooocus Seamless 2M SDE Karras Inpaint Sampler\" (beta)": "* \"Inpaint or Outpaint\" is powered by the sampler \"DPMPP Fooocus Seamless 2M SDE Karras Inpaint Sampler\" (beta)",
-    "Advanced options": "Advanced options",
-    "Generate mask from image": "Generate mask from image",
-    "Settings": "Settings",
-    "Style": "Style",
-    "Styles": "Styles",
-    "Preset": "Preset",
-    "Performance": "Performance",
-    "Speed": "Speed",
-    "Quality": "Quality",
-    "Extreme Speed": "Extreme Speed",
-    "Lightning": "Lightning",
-    "Aspect Ratios": "Aspect Ratios",
-    "width \u00d7 height": "width \u00d7 height",
-    "Image Number": "Image Number",
-    "Negative Prompt": "Negative Prompt",
-    "Describing what you do not want to see.": "Describing what you do not want to see.",
-    "Random": "Random",
-    "Seed": "Seed",
-    "Disable seed increment": "Disable seed increment",
-    "Disable automatic seed increment when image number is > 1.": "Disable automatic seed increment when image number is > 1.",
-    "Read wildcards in order": "Read wildcards in order",
-    "Black Out NSFW": "Black Out NSFW",
-    "Use black image if NSFW is detected.": "Use black image if NSFW is detected.",
-    "Save only final enhanced image": "Save only final enhanced image",
-    "Save Metadata to Images": "Save Metadata to Images",
-    "Adds parameters to generated images allowing manual regeneration.": "Adds parameters to generated images allowing manual regeneration.",
-    "\ud83d\udcda History Log": "\uD83D\uDCDA History Log",
-    "Image Style": "Image Style",
+    "Left": "Esquerda",
+    "Right": "Direita",
+    "Top": "Topo",
+    "Bottom": "Inferior",
+    "* \"Inpaint or Outpaint\" is powered by the sampler \"DPMPP Fooocus Seamless 2M SDE Karras Inpaint Sampler\" (beta)": "* \"Inpaint ou Outpaint\" é alimentado pelo amostrador \"DPMPP Fooocus Seamless 2M SDE Karras Inpaint Sampler\" (beta)",
+    "Advanced options": "Opções avançadas",
+    "Generate mask from image": "Gerar máscara a partir da imagem",
+    "Settings": "Configurações",
+    "Style": "Estilo",
+    "Styles": "Estilos",
+    "Preset": "Predefinição",
+    "Performance": "Desempenho",
+    "Speed": "Velocidade",
+    "Quality": "Qualidade",
+    "Extreme Speed": "Velocidade Extrema",
+    "Lightning": "Relâmpago",
+    "Aspect Ratios": "Proporções da Imagem",
+    "width × height": "largura × altura",
+    "Image Number": "Número de Imagens",
+    "Negative Prompt": "Prompt Negativo",
+    "Describing what you do not want to see.": "Descrevendo o que você não quer ver.",
+    "Random": "Aleatório",
+    "Seed": "Semente",
+    "Disable seed increment": "Desabilitar incremento da semente",
+    "Disable automatic seed increment when image number is > 1.": "Desabilitar incremento automático da semente quando o número de imagens for > 1.",
+    "Read wildcards in order": "Ler curingas na ordem",
+    "Black Out NSFW": "Ocultar NSFW",
+    "Use black image if NSFW is detected.": "Usar imagem preta se NSFW for detectado.",
+    "Save only final enhanced image": "Salvar apenas a imagem final aprimorada",
+    "Save Metadata to Images": "Salvar Metadados nas Imagens",
+    "Adds parameters to generated images allowing manual regeneration.": "Adiciona parâmetros às imagens geradas permitindo regeneração manual.",
+    "📔 History Log": "📔 Histórico",
+    "Image Style": "Estilo da Imagem",
     "Fooocus V2": "Fooocus V2",
-    "Random Style": "Random Style",
-    "Default (Slightly Cinematic)": "Default (Slightly Cinematic)",
-    "Fooocus Masterpiece": "Fooocus Masterpiece",
-    "Fooocus Photograph": "Fooocus Photograph",
-    "Fooocus Negative": "Fooocus Negative",
-    "SAI 3D Model": "SAI 3D Model",
-    "SAI Analog Film": "SAI Analog Film",
-    "SAI Anime": "SAI Anime",
-    "SAI Cinematic": "SAI Cinematic",
-    "SAI Comic Book": "SAI Comic Book",
-    "SAI Craft Clay": "SAI Craft Clay",
-    "SAI Digital Art": "SAI Digital Art",
-    "SAI Enhance": "SAI Enhance",
-    "SAI Fantasy Art": "SAI Fantasy Art",
-    "SAI Isometric": "SAI Isometric",
-    "SAI Line Art": "SAI Line Art",
-    "SAI Lowpoly": "SAI Lowpoly",
-    "SAI Neonpunk": "SAI Neonpunk",
-    "SAI Origami": "SAI Origami",
-    "SAI Photographic": "SAI Photographic",
-    "SAI Pixel Art": "SAI Pixel Art",
-    "SAI Texture": "SAI Texture",
+    "Random Style": "Estilo Aleatório",
+    "Default (Slightly Cinematic)": "Padrão (Levemente Cinemático)",
+    "Fooocus Masterpiece": "Fooocus Obra Prima",
+    "Fooocus Photograph": "Fooocus Fotografia",
+    "Fooocus Negative": "Fooocus Negativo",
+    "SAI 3D Model": "Modelo 3D SAI",
+    "SAI Analog Film": "Filme Analógico SAI",
+    "SAI Anime": "Anime SAI",
+    "SAI Cinematic": "Cinemático SAI",
+    "SAI Comic Book": "História em Quadrinhos SAI",
+    "SAI Craft Clay": "Argila Artesanal SAI",
+    "SAI Digital Art": "Arte Digital SAI",
+    "SAI Enhance": "Aprimorar SAI",
+    "SAI Fantasy Art": "Arte Fantástica SAI",
+    "SAI Isometric": "Isométrico SAI",
+    "SAI Line Art": "Arte de Linha SAI",
+    "SAI Lowpoly": "Lowpoly SAI",
+    "SAI Neonpunk": "Neonpunk SAI",
+    "SAI Origami": "Origami SAI",
+    "SAI Photographic": "Fotográfico SAI",
+    "SAI Pixel Art": "Pixel Art SAI",
+    "SAI Texture": "Textura SAI",
     "MRE Cinematic Dynamic": "MRE Cinematic Dynamic",
-    "MRE Spontaneous Picture": "MRE Spontaneous Picture",
-    "MRE Artistic Vision": "MRE Artistic Vision",
-    "MRE Dark Dream": "MRE Dark Dream",
-    "MRE Gloomy Art": "MRE Gloomy Art",
-    "MRE Bad Dream": "MRE Bad Dream",
-    "MRE Underground": "MRE Underground",
-    "MRE Surreal Painting": "MRE Surreal Painting",
-    "MRE Dynamic Illustration": "MRE Dynamic Illustration",
-    "MRE Undead Art": "MRE Undead Art",
-    "MRE Elemental Art": "MRE Elemental Art",
-    "MRE Space Art": "MRE Space Art",
-    "MRE Ancient Illustration": "MRE Ancient Illustration",
-    "MRE Brave Art": "MRE Brave Art",
-    "MRE Heroic Fantasy": "MRE Heroic Fantasy",
-    "MRE Dark Cyberpunk": "MRE Dark Cyberpunk",
-    "MRE Lyrical Geometry": "MRE Lyrical Geometry",
-    "MRE Sumi E Symbolic": "MRE Sumi E Symbolic",
-    "MRE Sumi E Detailed": "MRE Sumi E Detailed",
+    "MRE Spontaneous Picture": "MRE Imagem Espontânea",
+    "MRE Artistic Vision": "MRE Visão Artística",
+    "MRE Dark Dream": "MRE Sonho Sombrio",
+    "MRE Gloomy Art": "MRE Arte Sombria",
+    "MRE Bad Dream": "MRE Mau Sonho",
+    "MRE Underground": "MRE Subterrâneo",
+    "MRE Surreal Painting": "MRE Pintura Surreal",
+    "MRE Dynamic Illustration": "MRE Ilustração Dinâmica",
+    "MRE Undead Art": "MRE Arte dos Mortos-Vivos",
+    "MRE Elemental Art": "MRE Arte Elementar",
+    "MRE Space Art": "MRE Arte Espacial",
+    "MRE Ancient Illustration": "MRE Ilustração Antiga",
+    "MRE Brave Art": "MRE Arte Corajosa",
+    "MRE Heroic Fantasy": "MRE Fantasia Heroica",
+    "MRE Dark Cyberpunk": "MRE Cyberpunk Sombrio",
+    "MRE Lyrical Geometry": "MRE Geometria Lirica",
+    "MRE Sumi E Symbolic": "MRE Sumi E Simbólica",
+    "MRE Sumi E Detailed": "MRE Sumi E Detalhada",
     "MRE Manga": "MRE Manga",
     "MRE Anime": "MRE Anime",
-    "MRE Comic": "MRE Comic",
-    "Ads Advertising": "Ads Advertising",
-    "Ads Automotive": "Ads Automotive",
-    "Ads Corporate": "Ads Corporate",
-    "Ads Fashion Editorial": "Ads Fashion Editorial",
-    "Ads Food Photography": "Ads Food Photography",
-    "Ads Gourmet Food Photography": "Ads Gourmet Food Photography",
-    "Ads Luxury": "Ads Luxury",
-    "Ads Real Estate": "Ads Real Estate",
-    "Ads Retail": "Ads Retail",
-    "Artstyle Abstract": "Artstyle Abstract",
-    "Artstyle Abstract Expressionism": "Artstyle Abstract Expressionism",
-    "Artstyle Art Deco": "Artstyle Art Deco",
-    "Artstyle Art Nouveau": "Artstyle Art Nouveau",
-    "Artstyle Constructivist": "Artstyle Constructivist",
-    "Artstyle Cubist": "Artstyle Cubist",
-    "Artstyle Expressionist": "Artstyle Expressionist",
-    "Artstyle Graffiti": "Artstyle Graffiti",
-    "Artstyle Hyperrealism": "Artstyle Hyperrealism",
-    "Artstyle Impressionist": "Artstyle Impressionist",
-    "Artstyle Pointillism": "Artstyle Pointillism",
-    "Artstyle Pop Art": "Artstyle Pop Art",
-    "Artstyle Psychedelic": "Artstyle Psychedelic",
-    "Artstyle Renaissance": "Artstyle Renaissance",
-    "Artstyle Steampunk": "Artstyle Steampunk",
-    "Artstyle Surrealist": "Artstyle Surrealist",
-    "Artstyle Typography": "Artstyle Typography",
-    "Artstyle Watercolor": "Artstyle Watercolor",
-    "Futuristic Biomechanical": "Futuristic Biomechanical",
-    "Futuristic Biomechanical Cyberpunk": "Futuristic Biomechanical Cyberpunk",
-    "Futuristic Cybernetic": "Futuristic Cybernetic",
-    "Futuristic Cybernetic Robot": "Futuristic Cybernetic Robot",
-    "Futuristic Cyberpunk Cityscape": "Futuristic Cyberpunk Cityscape",
-    "Futuristic Futuristic": "Futuristic Futuristic",
-    "Futuristic Retro Cyberpunk": "Futuristic Retro Cyberpunk",
-    "Futuristic Retro Futurism": "Futuristic Retro Futurism",
-    "Futuristic Sci Fi": "Futuristic Sci Fi",
-    "Futuristic Vaporwave": "Futuristic Vaporwave",
-    "Game Bubble Bobble": "Game Bubble Bobble",
-    "Game Cyberpunk Game": "Game Cyberpunk Game",
-    "Game Fighting Game": "Game Fighting Game",
-    "Game Gta": "Game Gta",
-    "Game Mario": "Game Mario",
-    "Game Minecraft": "Game Minecraft",
-    "Game Pokemon": "Game Pokemon",
-    "Game Retro Arcade": "Game Retro Arcade",
-    "Game Retro Game": "Game Retro Game",
-    "Game Rpg Fantasy Game": "Game Rpg Fantasy Game",
-    "Game Strategy Game": "Game Strategy Game",
-    "Game Streetfighter": "Game Streetfighter",
-    "Game Zelda": "Game Zelda",
-    "Misc Architectural": "Misc Architectural",
-    "Misc Disco": "Misc Disco",
-    "Misc Dreamscape": "Misc Dreamscape",
-    "Misc Dystopian": "Misc Dystopian",
-    "Misc Fairy Tale": "Misc Fairy Tale",
-    "Misc Gothic": "Misc Gothic",
-    "Misc Grunge": "Misc Grunge",
-    "Misc Horror": "Misc Horror",
-    "Misc Kawaii": "Misc Kawaii",
-    "Misc Lovecraftian": "Misc Lovecraftian",
-    "Misc Macabre": "Misc Macabre",
-    "Misc Manga": "Misc Manga",
-    "Misc Metropolis": "Misc Metropolis",
-    "Misc Minimalist": "Misc Minimalist",
-    "Misc Monochrome": "Misc Monochrome",
+    "MRE Comic": "MRE Quadrinhos",
+    "Ads Advertising": "Publicidade de Anúncios",
+    "Ads Automotive": "Publicidade Automotiva",
+    "Ads Corporate": "Publicidade Corporativa",
+    "Ads Fashion Editorial": "Publicidade Editorial de Moda",
+    "Ads Food Photography": "Publicidade Fotografia de Alimentos",
+    "Ads Gourmet Food Photography": "Publicidade Fotografia de Alimentos Gourmet",
+    "Ads Luxury": "Publicidade de Luxo",
+    "Ads Real Estate": "Publicidade Imobiliária",
+    "Ads Retail": "Publicidade de Varejo",
+    "Artstyle Abstract": "Estilo de Arte Abstrato",
+    "Artstyle Abstract Expressionism": "Estilo de Arte Expressionismo Abstrato",
+    "Artstyle Art Deco": "Estilo de Arte Art Deco",
+    "Artstyle Art Nouveau": "Estilo de Arte Art Nouveau",
+    "Artstyle Constructivist": "Estilo de Arte Construtivista",
+    "Artstyle Cubist": "Estilo de Arte Cubista",
+    "Artstyle Expressionist": "Estilo de Arte Expressionista",
+    "Artstyle Graffiti": "Estilo de Arte Grafite",
+    "Artstyle Hyperrealism": "Estilo de Arte Hiper-realismo",
+    "Artstyle Impressionist": "Estilo de Arte Impressionista",
+    "Artstyle Pointillism": "Estilo de Arte Pontilhismo",
+    "Artstyle Pop Art": "Estilo de Arte Pop Art",
+    "Artstyle Psychedelic": "Estilo de Arte Psicodélico",
+    "Artstyle Renaissance": "Estilo de Arte Renascimento",
+    "Artstyle Steampunk": "Estilo de Arte Steampunk",
+    "Artstyle Surrealist": "Estilo de Arte Surrealista",
+    "Artstyle Typography": "Estilo de Arte Tipografia",
+    "Artstyle Watercolor": "Estilo de Arte Aquarela",
+    "Futuristic Biomechanical": "Futurista Biomecânico",
+    "Futuristic Biomechanical Cyberpunk": "Futurista Biomecânico Cyberpunk",
+    "Futuristic Cybernetic": "Futurista Cibernético",
+    "Futuristic Cybernetic Robot": "Futurista Robô Cibernético",
+    "Futuristic Cyberpunk Cityscape": "Futurista Paisagem Urbana Cyberpunk",
+    "Futuristic Futuristic": "Futurista Futurista",
+    "Futuristic Retro Cyberpunk": "Futurista Retro Cyberpunk",
+    "Futuristic Retro Futurism": "Futurista Retro Futurismo",
+    "Futuristic Sci Fi": "Futurista Ficção Científica",
+    "Futuristic Vaporwave": "Futurista Vaporwave",
+    "Game Bubble Bobble": "Jogo Bubble Bobble",
+    "Game Cyberpunk Game": "Jogo Cyberpunk",
+    "Game Fighting Game": "Jogo de Luta",
+    "Game Gta": "Jogo GTA",
+    "Game Mario": "Jogo Mario",
+    "Game Minecraft": "Jogo Minecraft",
+    "Game Pokemon": "Jogo Pokémon",
+    "Game Retro Arcade": "Jogo Retro Arcade",
+    "Game Retro Game": "Jogo Retro",
+    "Game Rpg Fantasy Game": "Jogo RPG de Fantasia",
+    "Game Strategy Game": "Jogo de Estratégia",
+    "Game Streetfighter": "Jogo Streetfighter",
+    "Game Zelda": "Jogo Zelda",
+    "Misc Architectural": "Diversos Arquitetônicos",
+    "Misc Disco": "Diversos Disco",
+    "Misc Dreamscape": "Diversos Paisagem dos Sonhos",
+    "Misc Dystopian": "Diversos Distópicos",
+    "Misc Fairy Tale": "Diversos Conto de Fadas",
+    "Misc Gothic": "Diversos Gótico",
+    "Misc Grunge": "Diversos Grunge",
+    "Misc Horror": "Diversos Horror",
+    "Misc Kawaii": "Diversos Kawaii",
+    "Misc Lovecraftian": "Diversos Lovecraftiano",
+    "Misc Macabre": "Diversos Macabro",
+    "Misc Manga": "Diversos Manga",
+    "Misc Metropolis": "Diversos Metrópole",
+    "Misc Minimalist": "Diversos Minimalista",
+    "Misc Monochrome": "Diversos Monocromático",
     "Misc Nautical": "Misc Nautical",
     "Misc Space": "Misc Space",
     "Misc Stained Glass": "Misc Stained Glass",
